:gear: meta tags and some clean up

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,20 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <meta name="google-site-verification" content="GY6wChtzx4KiSeVtr7cCUnZselhDM-2zVgp90aBmHlc" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Chat-bot EateryBot landing and administration page." />
+  <meta property="author" content="trefis">
+  <meta property="og:title" content="Eatery Bot" />
+  <meta property="og:type" content="eatery">
+  <meta property="description" content="Chat-bot EateryBot landing and administration page.">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <title>Eatery Bot</title>
 </head>
 <body>
